apps/aoch/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aoch
  namespace: default
  labels:
    app: aoch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aoch
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: aoch
      labels:
        app: aoch
    spec:
      containers:
        - name: aoch
          image: ghcr.io/wisvch/aoch:20251216-89a1266 # {"$imagepolicy": "flux-system:aoch"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          resources: #TODO: Update resources when this is running again
            limits:
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 150Mi
