apps/aoch/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aoch
  name: aoch
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: aoch
  sessionAffinity: None
  type: ClusterIP
