apps/aoch/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: aoch
  namespace: default
spec:
  parentRefs:
  - kind: Gateway
    namespace: gateway-infra
    name: gateway
  hostnames:
  - aoch.wisv.ch
  rules:
  - backendRefs:
    - name: aoch
      port: 80
